--- a/public/style.css
+++ b/public/style.css
@@ -8,10 +8,19 @@
 
 *{
     font-family: 'Barlow','Noto Color Emoji','sans-serif';
+    padding: 0;
+    margin: 0;
 }
 
 body{
     background: #192732!important;
     overflow:auto;
-    position: relative;
+    display: flex;
+    flex-direction:column;
+    min-height: 100vh;
+}
+@media only screen and (min-height: 1080px) {
+    .bottom-footer{
+        bottom:0!important;
+    }
 }
