Index change and using animation in separate js.

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -4,3 +4,7 @@
 .drop-width{
     min-width: 2rem!important;
 }
+.navbar-toggler:focus{
+    outline: none!important;
+    box-shadow: none!important;
+}
