--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,16 @@ body{
     flex-direction:column;
     min-height: 100vh;
 }
+ul{
+    list-style: none;
+}
+
+@media screen and (max-width:470px) {
+    .text-name{
+        font-size: 9px;
+        
+    }
+    .text-badge{
+        font-size: 11px!important;
+    }
+}
