Some changes in contact animation and Add project link

--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,9 @@ ul{
 }
 
 @media screen and (max-width:470px) {
+    .btn-project{
+        width: 100%!important;
+    }
     .text-name{
         font-size: 9px;
         
